# i2c-test

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
examples/: aht20-bl-semi.rs  aht20-dr-semi.rs  aht20-em-semi.rs  sht30-em-semi.rs  shtc3-semi.rs  xca9548a-aht20-bl.rs  xca9548a-aht20-dr.rs  xca9548a-aht20-em.rs  xca9548a-sht30.rs  xca9548a-shtc3.rs
src/: alt_delay.rs  lib.rs  setup.rs  setup_all_stm32f1xx.rs  setup_all_stm32f4xx.rs  setup_all_stm32g4xx.rs
