[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "test i2c sensors crates (eh-1, no-std, on stm32...)"
keywords = ["driver", "i2c", "example"]
license = "MIT OR Apache-2.0"
name = "i2c-test"
version = "0.0.1"
edition = "2021"

[dependencies]
                                          
#stm32f1xx-hal = { version = "0.10.0", optional = true }
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }

#stm32f4xx-hal = { version = "0.22.1", optional = true } 
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true }   #Dec 26, 2024:  stm32f4xx-hal#ed88ea13

stm32g4xx-hal = { git = "https://github.com/techmccat/stm32g4xx-hal", optional = true, branch = "hal-1" }
#stm32g4xx-hal = {  git = "https://github.com/pdgilbert/stm32g4xx-hal",optional = true, branch = "hal-1" }



aht20-bl          = { package = "aht20", git = "https://github.com/blueluna/aht20" } #eh-1 now but errors are not returned, and consumes delay.

embedded-aht20   = "0.1.3"     #eh-1 and both sync and async
#embedded-aht20   = { git = "https://github.com/ghismary/embedded-aht20" }

aht20-driver     = { version = "2.0.0", default-features = false } #eh-1 
#aht20-driver    = { git = "https://github.com/anglerud/aht20-driver", default-features = false }



embedded-sht3x   =  "0.1.0"     #eh-1 and both sync and async
#embedded-sht3x   =  https://gitlab.com/ghislainmary/embedded-sht3x/

shtcx         =  { git = "https://github.com/dbrgn/shtcx-rs" }



#ssd1306         = { git = "https://github.com/bugadani/ssd1306", branch = "ehal1"  }     #eh-1 display interface 0.8.4
ssd1306         = { git = "https://github.com/sjoerdsimons/ssd1306", branch = "master"  } # embedded-hal-1.0.0

embedded-graphics = ">=0.7"


#xca9548a         = ">=1.0.0"
#xca9548a         = { git = "https://github.com/eldruin/xca9548a-rs" }
xca9548a         = { git = "https://github.com/eldruin/xca9548a-rs", rev = "f7ef250" } 


embedded-hal        = "1.0"
embedded-hal-bus    = "0.2.0"
embedded-hal-async  = "1.0.0"
embedded-io         = "0.6.1"
#embedded-hal       = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-bus   = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-io        = { git = "https://github.com/rust-embedded/embedded-hal/" }

#embedded-hal-nb    = { git = "https://github.com/rust-embedded/embedded-hal/" }

heapless = "0.7"
nb = ">=1.1.0"
libm = "0.2"
cortex-m = ">=0.7"
cortex-m-rt = ">=0.7.0"


panic-rtt-target = { version =  "0.2.0"}
rtt-target = { version =  ">=0.6.1" }

cortex-m-semihosting   = { package = "cortex-m-semihosting", version = ">=0.5.0" } # uses eh-1 but no unwrap()

panic-semihosting    = { version = ">=0.5.2" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }
#void                 = { version = ">=1.0.2", default-features = false } # err return values in some hals


[features]
stm32f1xx = ["stm32f1xx-hal", ]
stm32f4xx = ["stm32f4xx-hal", ] 
stm32g4xx = ["stm32g4xx-hal", ]

stm32f100     = ["stm32f1xx-hal/stm32f100"  ]
stm32f101     = ["stm32f1xx-hal/stm32f101"  ]
stm32f103     = ["stm32f1xx-hal/stm32f103",    "stm32f1xx-hal/medium"]
stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
stm32f405     = ["stm32f4xx-hal/stm32f405"  ] 
stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 
stm32g431xB   = ["stm32g4xx-hal/stm32g431"  ]
stm32g473     = ["stm32g4xx-hal/stm32g473"  ]
stm32g474xE   = ["stm32g4xx-hal/stm32g474"  ]

